# PLCview

./: .gitignore  BUILD.md  CLAUDE.md  HISTORY.md  MELSOFT_CONNECTION_GUIDE.md  NOWPLAN_ENHANCED.md  Order.txt  PLC_CONNECTION_TROUBLESHOOT.md  Procfile  REPAIR.md  SECURITY.md  docs_response.html  logs.1.json  nixpacks.toml  railway.toml  requirements.txt  test_response.html
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  plc_mentor_project_completion.md  plc_mentor_session_context.md  plc_mentor_technical_details.md  project_overview.md  suggested_commands.md  task_completion_procedures.md
plc-ai-assistant-backup/: .env.example  README.md  pyproject.toml  pytest.ini  requirements.txt
plc-ai-assistant-backup/app/: config.py  main.py
plc-ai-assistant-backup/app/api/v1/: router.py
plc-ai-assistant-backup/app/api/v1/endpoints/: ai.py  plc.py  plc_endpoints.py  system.py
plc-ai-assistant-backup/app/config/: device_mapping.py
plc-ai-assistant-backup/app/services/: websocket_manager.py
plc-ai-assistant-backup/app/services/ai/: ollama_client.py
plc-ai-assistant-backup/app/services/plc/: connection.py  simulator.py
plc-ai-assistant-backup/app/utils/: gemini_helper.py
plc-ai-assistant-backup/frontend/: index.html
plc-ai-assistant-backup/scripts/: run_tests.py  setup_redis.py  start.bat  start.ps1  start.sh
plc-ai-assistant-backup/tests/integration/: test_api_integration.py
plc-mentor/: README.md  app.py
plc-mentor/app/: __init__.py
plc-mentor/templates/: analyze.html  (+5 more)
(+11 files in other folders)
