[tool.poetry]
name = "plc-ai-assistant"
version = "0.1.0"
description = "PLC AI Support System - Cross-platform compatible"
authors = ["Developer <dev@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.0"
uvicorn = {extras = ["standard"], version = "0.27.0"}
pymcprotocol = "0.3.0"
redis = "5.0.1"
pydantic-settings = "2.1.0"
python-multipart = "0.0.6"
sqlalchemy = "2.0.25"
websockets = "12.0"
aiohttp = "3.9.1"
psutil = "5.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "0.23.2"
black = "23.12.0"
flake8 = "7.0.0"
mypy = "1.8.0"

[tool.poetry.group.test.dependencies]
httpx = "0.26.0"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plc-server = "app.main:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true